make grammar and sentence structure corrections in production section

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -137,29 +137,28 @@ From the user perspective, the more complex an app, the more steep the learning 
 ### Production Grade Software Engineering
 
 Complexity is still frowned upon by a lot of developers, notably because it has been seen as something to avoid according to the Unix philosophy. 
-But there are dozens of reasons why an app can become complex: for example, the question your app is answering to is quite a complicated question which involves a lot of computation and routines, the app is rather ambitious and implements a lot of features, etc.
+But there are dozens of reasons why an app can become complex: for example, the question your app is answering is quite complicated and involves a lot of computation and routines. The resulting app is rather ambitious and implements a lot of features, etc.
 So yes, there is a chance that if you're reading this page, you're working or are planning to work on a complex Shiny app. 
-And this is not necessarily a bad thing. 
-Shiny apps can definitely be used to implement a production-grade
+And this is not necessarily a bad thing! 
+Shiny apps can definitely be used to implement production-grade
 ^[By production-grade, we mean a software that can be used in a context where people use it for doing their job, and where failures or bugs have real-life consequences] 
 software, but production-grade software implies production-grade software engineering. 
-And your goal to make this project a success is be to prepared, to use tools that will reduce the complexity of your app, and ensure that your app has the quality to age well. 
+To make your project a success, you need to use tools that reduce the complexity of your app and ensure that your app is resiliant to aging. 
 
-In other words, production-grade Shiny apps require working with a software engineering mindset. 
-Which is not always that easy a task in the R world. 
-R comes from the land of the academics and is still used a lot as an "experimentation tool", and in context where production quality is one of the least concerns. 
+In other words, production-grade Shiny apps require working with a software engineering mindset, which is not always an easy task in the R world. 
+R comes from the land of the academics and is still used as an "experimentation tool", where production quality is one of the least concerns. 
 Many developers in the R world have learned R as a tool for making statistics, not as a tool for building software.
-Both these contexts are very different and require different mindsets, different skills and tools. 
+These contexts are very different and require different mindsets, skills, and tools. 
 
 With `{shiny}`, as we said before, it's quite easy to prototype a simple app, without any "hardcore" software engineering skills. 
 And when we're happy with our little proof of concept, we're tempted to add something new. 
 And another. 
 And another. 
-And without any structured methodology, we're almost certain that we'll reach the cliff of complexity very soon, with a code base that is hardly (if ever) ready to be refactored to be sent to production. 
+And without any structured methodology, we're almost certain to reach the cliff of complexity very soon and end up with a code base that is hardly (if ever) ready to be refactored to be sent to production. 
 
 The good news is that building a complex app with R (or with any other language) is not an impossible task. 
-But it requires planning, rigor, and correct tooling. 
-This is what this book is about: how to organise your Shiny App project in a way that is time and code efficient, and how to get the correct tooling for making your application a success.
+But it requires planning, rigor, and correct engineering.   
+This is what this book is about: how to organise your Shiny App in a way that is time and code efficient, and how to use correct engineering to make your app a success.
 
 ## What's a successful Shiny App? 
 
