correct grammar and sentence structure for successful shiny app section

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -162,17 +162,17 @@ This is what this book is about: how to organise your Shiny App in a way that is
 
 ## What's a successful Shiny App? 
 
-Another good news is that your application does not have to be complex to be successful.
+The good news is that your application does not have to be complex to be successful.
 Even more, in a world where "less is more", the more you can reduce your application complexity, the more you'll be prepared for success. 
 
 So what's a successful Shiny app? 
-Defining such a metric is not that easy a task, but we can extract some common patterns when it comes to applications that can be listed as successful. 
+Defining such a metric is not an easy a task, but we can extract some common patterns when it comes to applications that would be considered successful. 
 
 ### It exists
 
 First of all, an app is successful if it was delivered.
 In other words, the developer team was able to move from specification to implementation to testing to delivering. 
-This is a very engineering-oriented definition of success, but that's a pragmatic one: an app that never reaches the state of usability is not a successful app, as something along the way has blocked the process of finishing the code. 
+This is a very engineering-oriented definition of success, but it's a pragmatic one: an app that never reaches the state of usability is not a successful app, as something along the way has blocked the process of finishing the code. 
 
 This implies a lot of things: but mostly it implies that the team was able to organise itself in an efficient way, so that they were able to work together in making the project a success. 
 And anybody that has already worked on a code base as a team knows it's not an easy task.
@@ -180,22 +180,22 @@ And anybody that has already worked on a code base as a team knows it's not an e
 ### It's accurate
 
 The app was delivered, and it answers the question it is supposed to answer, or serves the purpose it is supposed to serve. 
-Delivering is not the only thing to keep in mind: you can deliver a working app but it doesn't work in the way it is supposed to work.
+Delivering is not the only thing to keep in mind: you can deliver a working app but it might not work in the way it is supposed to work.
 
 Just as before, accuracy means that between the moment the idea appears in someone's mind and the moment the app is actually ready to be used, everybody was able to work together toward a common goal.
 
 ### It's usable
 
-The app was delivered, it answers the question it is supposed to answer, and it is friendly on the user. 
-Unless you're coding for the sake of the art, there will always be one or more end user(s). 
-And if these person can't use the app because it's too hard to use, too hard to understand, because it's too slow or there is no inherent logic in the way the user experience is designed, then it's hard to tell the app is a success. 
+The app was delivered, it answers the question it is supposed to answer, and it is user-friendly. 
+Unless you're coding for the sake of the art, there will always be one or more end users. 
+And if these people can't use the app because it's too hard to use, too hard to understand, because it's too slow or there is no inherent logic in how the user experience is designed, then it's innapropriate to call the app is a success. 
 
 ### It's immortal
 
 Of course that's a little bit far fetched, but when designing the app, you should set the ground for robustness in time and aim at a (theoretical) immortality of the app. 
 
 Planning for the future is a very important component of a successful Shiny App project.
-Once the app is out, it's successful if it can exist in the long run, with all the hazards that implies: new package versions that potentially break the code base, implementation of new features in the global interface, changing key features of the UI or the back-end, and not to mention passing the code base along to someone who has not worked on the first version, and who is now in charge of working on version 2. 
-And this, again, is hard to do without effective planning and efficient tooling. 
-Well, and this new person might simply be you, a month from now. 
+Once the app is out, it's successful if it can exist in the long run, with all the hazards that implies: new package versions that potentially break the code base, implementation of new features in the global interface, changing key features of the UI or the back-end, and not to mention passing the code base along to someone who has not worked on the first version, and who is now in charge of developing the next version. 
+And this, again, is hard to do without effective planning and efficient engineering. 
+In fact, this new person might simply be you, a month from now. 
 And _"You'll be there in the future too, maintaining code you may have half forgotten under the press of more recent projects. When you design for the future, the sanity you save may be your own._^[_The Art of Unix Programming_, Eric Steven Raymond]
