make simple spell-check changes on entire chapter

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -46,7 +46,7 @@ Another way is to copy and paste an existing module and to adapt it, which is, a
 Or there is the `{golem}` way, in which you rely on a robust tool to build the foundations for a new module.
 
 Another benefit of adopting automation for common application components is that it ensures that you're following a convention. 
-And conventions are crucial when it comes to building and maintaining complex systems: by imposing a formalized structure for a piece of code, it ehances readability, lessens the learning curve, and lightens the chance for typos and/or copy and paste errors. 
+And conventions are crucial when it comes to building and maintaining complex systems: by imposing a formalized structure for a piece of code, it enhances readability, lessens the learning curve, and lightens the chance for typos and/or copy and paste errors. 
 
 
 +  Customers and users
@@ -82,7 +82,7 @@ _-> Insert here something of the like: "It's up to you to think about what's the
 #### Assessing complexity
 
 Another measure that sometimes comes in the discussion is the codebase size. 
-It's relatively hard to use this number of lines metric, as R is very permissive when it comes to identation and line breaks. It also depends on your coding style and the packages you're using. For example, tidyverse packages encourage the use of the pipe (`%>%`)
+It's relatively hard to use this number of lines metric, as R is very permissive when it comes to indentation and line breaks. It also depends on your coding style and the packages you're using. For example, [`{tidyverse}`](https://www.tidyverse.org/){target="_blank"} packages encourage the use of the pipe (`%>%`)
 ^[] 
 with one function by line, producing more lines in the end code.
 
