change "hard" to "difficult" in complexity = responsibility section

--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -130,7 +130,7 @@ cloc_cran("attempt", .progress = FALSE)
 
 ### With great complexity comes great responsibility
 
-When your program reaches this state, there is a lot of potential for failure, be it from a developer or user perspective. For the code, bugs are harder to anticipate: it's hard to think about all the different paths the software can follow, it's hard to detect bugs because they are deeply nested in the numerous routines the app is doing. 
+When your program reaches this state, there is a lot of potential for failure, be it from a developer or user perspective. For the code, bugs are harder to anticipate: it's hard to think about all the different paths the software can follow and difficult to detect bugs because they are deeply nested in the numerous routines the app is doing. 
 It's also hard to think about what the state of your app is at a given moment in time because of the numerous inputs and outputs your app contains. 
 From the user perspective, the more complex an app, the more steep the learning curve is, which means that the user will have to invest more time learning how the app works, and will be even more disappointed if ever they realise this time has been a waste. 
 
