add Liz Roten with github link to acknowledgments section

--- a/index.Rmd
+++ b/index.Rmd
@@ -75,6 +75,8 @@ Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-
 
 ## Acknowledgments {-}
 
++ [Liz Roten](https://github.com/eroten){target="_blank"}
+
 // TODO : 
 
 ```{r echo = FALSE}
