--- a/javascript.Rmd
+++ b/javascript.Rmd
@@ -4,14 +4,14 @@
 knitr::opts_chunk$set( comment = "", eval = FALSE)
 ```
 
-In its core, __building a Shiny app is building a JavaScript app__ that can talk with an R session. 
-This process is invisible for most Shiny developers, who usually do everything with R. 
-And in the end, it's the case: most of the Shiny apps out there are written with R. 
+At its core, __building a Shiny app is building a JavaScript app__ that can talk with an R session. 
+This process is invisible to most Shiny developers, who usually do everything in R. 
+And in the end, this is the case: most of the Shiny apps out there are written with R. 
 
-But in fact, when you are writing UI elements in Shiny, __what you are actually doing is building a series of HTML tags, which are then linked to JavaScript events__. 
+In fact, when you are writing UI elements in Shiny, __what you are actually doing is building a series of HTML tags, which are then linked to JavaScript events__. 
 Later on, when the app is running, these JavaScript events will communicate with R, in the sense that they will send data to R, and receive data from R. 
 Most of the time, when these JavaScript events are receiving data, they modify the page the user sees.
-What happens under the hood is a little bit complex and out of scope for this book, but the general idea is there: R talks to your browser through a web socket (that you can imagine as a small "phone line" with both softwares listening on one hand^[
+What happens under the hood is a little bit complex and out of scope for this book, but the general idea is: R talks to your browser through a web socket (that you can imagine as a small "phone line" with both software modules listening at each end^[
 See this [dev.to](https://dev.to/buzzingbuzzer/comment/g0g) post for a quick introduction to the general concept of web socket
 ]), and this browser talks to R through the same web socket.
 
@@ -23,23 +23,22 @@ See this [dev.to](https://dev.to/buzzingbuzzer/comment/g0g) post for a quick int
 
 It's important to note here that the __communication happens in both ways__: from R to JavaScript, and from JavaScript to R. 
 In fact, when we write a piece of code like `sliderInput("plop", "this", 1, 10, 5)`, what we are doing is creating a binding between JavaScript and R, where JavaScript listens to any event happening in the browser on the slider with the id `"plop"`, and whenever JavaScript detects that something happens to this element, something (most of the time its value) is sent back to R. 
-With `output$bla <- renderPlot({})`, what we are doing is making the two communicates the other way around: we are telling JavaScript to listen to any incoming data from R for the `id` `"bla"`, and whenever JavaScript sees incoming data from R, it puts it into the proper HTML tag (here, JavaScript inserts in the page the image received from R). 
+With `output$bla <- renderPlot({})`, what we are doing is making the two communicate the other way around: we are telling JavaScript to listen to any incoming data from R for the `id` `"bla"`, and whenever JavaScript sees incoming data from R, it puts it into the proper HTML tag (here, JavaScript inserts in the page the image received from R). 
 
 So even if everything is written with R, we __are__ writing a web application, i.e. HTML, CSS and JavaScript elements. 
 Once you've realized that, the possibilities are endless: in fact almost anything doable in a "classic" web app can be done in Shiny. 
-What this also implies is that getting (even a little bit) better at writing HTML, CSS and especially JavaScript will make your app better, lighter, and more user friendly, as JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts... 
-__Knowing just enough JavaScript can improve the quality of your app__: especially when you've been using R to build some complex UI renderings: think conditional panels, simulating a button click from the server, hide and show elements... 
+What this also implies is that getting (even a little bit) better at writing HTML, CSS, and especially JavaScript will make your app better, lighter, and more user-friendly, as JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts... 
+__Knowing just enough JavaScript can improve the quality of your app__: especially when you've been using R to render some complex UIs: think conditional panels, simulating a button click from the server, hide and show elements... 
 All these things are good examples of where you should be using JavaScript instead of building more or less complex `renderUI` or `insertUI` patterns in your server.
-A good rule to live
 
 Moreover, the number of JavaScript libraries available on the web is tremendous ; and the good news is that Shiny has everything it needs to bundle external JavaScript libraries inside your application^[
 This can also be done by wrapping a JS libraries inside a package, which will later be used inside an application. 
 See for example [`{glouton}`](https://github.com/ColinFay/glouton), which is a wrapper around the [`js-cookie`](https://github.com/js-cookie/js-cookie) JavaScript library.
 ].
 
-This is what this part of the book aims at: giving you just enough JavaScript knowledge to lighten your Shiny App, in order to improve the global user and developer experience.
-In this part, we'll first see some JavaScript basics, which can be used "client-side" only, i.e. only in your browser, or by making R & JS communicate with each other. 
-In this part, we'll also explore common patterns for JavaScript in Shiny. 
+This is what this section of the book aims at: giving you just enough JavaScript knowledge to lighten your Shiny App, in order to improve the global user and developer experience.
+In this part, we'll first review some JavaScript basics which can be used "client-side" only, i.e. only in your browser, or by making R & JS communicate with each other. 
+In this section, we'll also explore common patterns for JavaScript in Shiny. 
 Finally, we'll quickly present some of the functions from `{golem}` which are built on top of JavaScript. 
 
 > Note that this chapter is not supposed to be a comprehensive JavaScript course. 
@@ -59,7 +58,7 @@ There are three ways to include the JavaScript code inside your web app:
 
 > Note that the good practice when it comes to include JavaScript is to add the code inside an external file.
 
-If you're working with `{golem}`, including a JavaScript file is performed using two functions: 
+If you're working with `{golem}`, including a JavaScript file is achieved via two functions: 
 
 + `golem::add_js_file("name")`, which adds a standard JavaScript file, i.e. one which is not meant to be used to communicate with R.
 We'll see in the first part of this chapter how to add JavaScript code there.
@@ -71,9 +70,9 @@ OK, good, but what do we do now?
 ### Understanding html, class, and id
 
 You have to think of a web page as a tree, where the top of the webpage is the root node, and every element in the page is a node in this tree (this tree is called a DOM, for Document Object Model). 
-__You can work on any of these HTML node with JavaScript__: modify it, bind and/or listen to events, hide and show it...
+__You can work on any of these HTML nodes with JavaScript__: modify it, bind to it and/or listen to events, hide and show...
 But first, __you have to find a way to identify these elements__: either as a group of elements or as a unique element inside the whole tree. 
-That's what html semantic elements, classes and ids are made for.
+That's what html semantic elements, classes, and ids are made for.
 Consider this piece of code:
 
 ```{r echo = TRUE, eval = FALSE}
@@ -92,14 +91,14 @@ fluidPage(
 ```
 
 
-This `{shiny}` code creates a piece of HTML code, which contains three nodes: a `div` with a specific class (a BootStrap container), an `h2`, which is a level two header, and a button which has an id and a class.
-Both are included into the `div`. 
+This `{shiny}` code creates a piece of HTML code containing three nodes: a `div` with a specific class (a BootStrap container), an `h2`, which is a level-two header, and a button which has an id and a class.
+Both are included in the `div`. 
 Let's detail what we've got here:
 
-+ HTML tags, which are the building blocks of the "tree": here, `div`, `h2` and `button` are HTML tags.
++ HTML tags, which are the building blocks of the "tree": here `div`, `h2` and `button` are HTML tags.
 + The button has an `id`, which is short for "identifier". 
-This id has to to be unique: it's this reference that allows to spot this exact element, and more specifically it's this id that allows JavaScript and R to talk to each other: if you click on a button, you have to be sure that it's this specific button, and only that one.
-+ Elements can have a class, which can apply to multiple elements. 
+This id has to to be unique: this reference allows to refer to this exact element, and more specifically, it allows JavaScript and R to talk to each other: if you click on a button, you have to be sure you are referring to this specific button, and only that one.
++ Elements can have a class which can apply to multiple elements. 
 This can be used in JavaScript, but it's also very useful for styling elements in CSS. 
 
 ### About jQuery & jQuery selectors
@@ -135,20 +134,20 @@ You can refer to these with `[]` after the tag name.
 
 + `$('a[data-value="panel2"]')` refers to link(s) with  `data-value` being `"panel2"`
 
-All these selectors, along many others, are __used to identify one or more node(s) in the big tree which is a web page__. 
-Once we've identified these elements, we can either extract or change data contained in these nodes, or launch methods contained inside these nodes.
+These and other selectors are __used to identify one or more node(s) in the big tree which is a web page__. 
+Once we've identified these elements, we can either extract or change data contained in these nodes, or invoke methods contained within these nodes.
 Indeed JavaScript, as R, can be used as a functional language, but most of what we do is done in an object-oriented way. 
-In other words, you'll interact with objects from the web page, and these objects contain data and methods. 
+In other words, you'll interact with objects from the web page, and these objects will contain data and methods. 
 
 Note that this is not specific to jQuery: elements can also be selected with standard JavaScript. 
-jQuery has the advantage of simplifying selections and actions, and to be cross-platform, making it easier to ship applications that can work on all major browsers. 
-And, it comes with Shiny for free! 
+jQuery has the advantage of simplifying selections and actions and to be cross-platform, making it easier to ship applications that can work on all major browsers. 
+And it comes with Shiny for free! 
 
 ## Client-side JavaScript
 
 It's hard to give an exhaustive list of what you can do with JavaScript inside Shiny. 
 As a Shiny app is part JavaScript, part R, once you've got a good grasp of JavaScript you can quickly enhance any of your applications.
-That being said, there are some common things that can be done that would allow you to immediately optimize your application: i.e. small JavaScript functions that will prevent you from writing complex algorithmic logic in your application server. 
+That being said, a few common things can be done that would allow you to immediately optimize your application: i.e. small JavaScript functions that will prevent you from writing complex algorithmic logic in your application server. 
 
 ### Common patterns
 
@@ -166,12 +165,12 @@ output$ui <- renderUI({
 ```
 
 + `alert("message")` uses the built-in alert-box mechanism from the user's browser (i.e., the `alert()` function is not part of jQuery but it's built inside the user's browser).
-It works well as it relies on the browser instead of relying on R or on specific JavaScript library. 
-You can use this functionality to replace a call to `{shinyalert}`: the result is a little bit less aesthetically pleasing, but that's easier to implement and maintain.
+It works well as it relies on the browser instead of relying on R or on a specific JavaScript library. 
+You can use this functionality to replace a call to `{shinyalert}`: the result is a little less aesthetically pleasing, but that's easier to implement and maintain.
 
-+ `var x = prompt("this", "that");` this function open the built-in prompt, which is a text area where the user can input text. 
-With this code, when the user clicks on "OK", the text is stocked in a variable `x`, which you can then send back to R (see further part down this chapter for more info about how to do that). 
-This can replace something like : 
++ `var x = prompt("this", "that");` this function opens the built-in prompt, which is a text area where the user can input text. 
+With this code, when the user clicks "OK", the text is stored in the `x` variable, which you can then send back to R (see further part down this chapter for more info on how to do that). 
+This can replace something like the following: 
 
 ```{r}
 mod <- function() {
@@ -194,7 +193,7 @@ observeEvent(input$ok, {
 })
 ```
 
-+ `$('#id').css('color', 'green');` changes the css attributes of the selected element(s). 
++ `$('#id').css('color', 'green');` changes the CSS attributes of the selected element(s). 
 Here, we're switching to green on the `#id` element.
 
 + `$("#id").text( "this" );` changes the text content to "this". 
@@ -216,14 +215,14 @@ IT can be used as a replacement for `shiny::removeUI()`, or as a conditional UI.
 ### Where to put them - introduction to JavaScript events
 
 OK, now that we've got some ideas about JS code that can be used in Shiny, where do we put them? 
-HTML and JS have a concept called `events`, which are... well events that happen when the user manipulates the webpage: when the user clicks, hovers (the mouse goes over an element), press the keyboard... 
+HTML and JS have a concept called `events`, which are... well events that happen when the user manipulates the webpage: when the user clicks, hovers (the mouse goes over an element), presses the keyboard... 
 All these events can be used to trigger a JavaScript function. 
 
-Here are some example of adding JavaScript functions to DOM events:
+Here are some examples of adding JavaScript functions to DOM events:
 
 +`onclick`
 
-The `onclick` attribute can be add straight inside the HTML tag when possible:
+The `onclick` attribute can be added straight inside the HTML tag when possible:
 
 ```{r eval = FALSE}
 tags$button(
@@ -273,7 +272,7 @@ You can find a real Life example of this `tagAppendAttributes` in the `{tidytues
 That, of course, works well with very small JavaScript code. 
 For longer JavaScript code, you can write a function inside and external file, and add it to your app. 
 In `{golem}`, this works by launching the `add_js_file("name")`, which will create a `.js` file. 
-You'll then need to add this function using the `tags$script(src="www/name.js")` inside the `golem_add_external_resources()` function in `R/app_ui.R` file. 
+You'll then need to add this function using `tags$script(src="www/name.js")` inside `golem_add_external_resources()` in `R/app_ui.R` file. 
 
 This, for example, could be: 
 
@@ -319,12 +318,12 @@ $(function(){
 });
 ```
 
-Then, all the plots from your app will receive this on click event^[
+Then, all the plots from your app will receive this on-click event^[
 This `click` behavior can also be done through `$(".shiny-plot-output").click(...)`. 
 We chose to display the `on("click")` pattern as it can be generalized to all DOM events.
 ].
 
-Note that there is a series of `Shiny events`, which are specific to Shiny but that you can used as the one we've just seen: 
+Note that there is a series of `Shiny events` which are specific to Shiny but that can be used just like the one we've just seen: 
 
 ```{js eval = FALSE, echo = TRUE}
 function alertme(){
@@ -344,7 +343,7 @@ See [JavaScript Events in Shiny](https://shiny.rstudio.com/articles/js-events.ht
 
 ## JavaScript <-> Shiny communication 
 
-Now that we've seen some client-side optimization, i.e. R doesn't do anything with these events when they happen (in fact R is not even aware that they happen), let's now see how we can make these two communicate with each other. 
+Now that we've seen some client-side optimization, i.e. R doesn't do anything with these events when they happen (in fact R is not even aware they happened), let's now see how we can make these two communicate with each other. 
 
 ### From R to JavaScript 
 
@@ -359,7 +358,7 @@ readLines("golex/inst/app/www/plop.js") %>%
 
 This skeleton is the one generated by `golem::add_js_handler("plop")`.
 
-Then, it will be called from server-side with:
+Then, it can be called from server-side with:
 
 ```{r eval = FALSE}
 session$sendCustomMessage("fun", list())
@@ -471,7 +470,7 @@ Listening on http://127.0.0.1:5495
 ```
 __Important note__: if you're using modules, you'll need to pass the namespacing of the `id` to be able to get it back from the server. 
 This can be done using the `session$ns` function, which comes by default in any golem-generated module. 
-And as an example speaks more than a 1000 words, here is what we mean by that:
+In other words, you'll need to write something like:
 
 ```{js eval = FALSE, echo = TRUE}
 $( document ).ready(function() {
@@ -518,7 +517,7 @@ These functions are added by default with `golem::activate_js()` in `app_ui`.
 
 Then they are called with `golem::invoke_js("function", "element")`.
 
-This `element` is a series of elements (most of the time scalar elements) that can be used to select the DOM node you need to interact with.
+This `element` can be one of a series of elements (most of the time scalar elements) which can be used to select the DOM node you want to interact with.
 It can be a full jQuery selector, an id or a class.
 Note that you can pass multiple elements, with `invoke_js` `...` parameters
 
